--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
   <body>
     <h1>About</h1>
     <p>
-      This site is a sample project to learn Git™ </em>.
+      This site is a sample project to learn Git™
+      commit.
     </p>
   </body>
 </html>
